fixes to env and paths, fixed problem with LF and CRFL files

--- a/src/app/modules/albums/components/dashboard/dashboard.component.html
+++ b/src/app/modules/albums/components/dashboard/dashboard.component.html
@@ -2,14 +2,11 @@
     <div class="image-wrapper">
         <img src="/assets/codelabs-logo.svg" alt="Logo SVG">
     </div>
-    <p>dashboard works!</p>
 </div>
 
 
 <ng-container *ngIf="loading; else loaded">
-    <div>
-        Some kind of Loader
-    </div>
+    <app-loading></app-loading>
 </ng-container>
 
 <ng-template #loaded>
