--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <div class="container-fluid overflow-hidden">
     <div class="row vh-100 overflow-auto">
-        <app-navigation class="col-12 col-sm-3 col-xl-2
-            px-sm-2 pt-sm-2 px-0
+        <app-navigation class="col-12 col-md-3 col-xl-2
+            px-md-2 pt-md-2 px-0
             bg-light d-flex sticky-top
             navigation"></app-navigation>
-        <div class="col">
-            <router-outlet></router-outlet>
+        <div class="col" style="min-height: calc(100vh - 62px);">
+            <main class="row overflow-auto">
+                <div class="col pt-4">
+                    <router-outlet></router-outlet>
+                </div>
+            </main>
         </div>
     </div>
 </div>
