--- a/src/app/modules/albums/components/album-card/album-card.component.html
+++ b/src/app/modules/albums/components/album-card/album-card.component.html
@@ -1,5 +1,14 @@
-<div>
-    <small>ID: {{album.id}}</small>
-    <b>Title: {{album.title}}</b>
-    <p>Belongs to: {{album.userId}}</p>
+<div class="card" style="height: 100%;">
+    <div class="card-body">
+        <h5 class="card-title">{{album.title}}</h5>
+        <p class="card-text">Belongs to: {{album.userId}}</p>
+    </div>
+    <div class="card-footer d-flex justify-content-center">
+        <button type="button" class="btn btn-primary me-2">
+            <i class="bi bi-pencil-square"></i>
+        </button>
+        <button type="button" class="btn btn-outline-danger">
+            <i class="bi bi-trash"></i>
+        </button>
+    </div>
 </div>
