--- a/src/app/modules/shared/components/navigation/navigation.component.html
+++ b/src/app/modules/shared/components/navigation/navigation.component.html
@@ -1,16 +1,20 @@
-<div class="d-flex flex-sm-column flex-row flex-grow-1 align-items-center align-items-sm-start px-3 py-2 text-white nav-wrapper">
-    <a href="/" class="d-flex align-items-center pb-sm-3 mb-md-0 me-md-auto text-white text-decoration-none">
+<div class="d-flex flex-md-column flex-row flex-grow-1 align-items-center align-items-md-start px-3 py-2 text-white nav-wrapper">
+    <a href="/" class="d-flex align-items-center pb-md-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <img src="/assets/codelabs-logo.svg" width="100px" alt="Logo SVG">
     </a>
-    <ul class="nav nav-pills flex-sm-column flex-row flex-nowrap flex-shrink-1 flex-sm-grow-0 flex-grow-1 mb-sm-auto mb-0 justify-content-center align-items-center align-items-sm-start" id="menu">
-        <li>
-            <a routerLink="/albums" data-bs-toggle="collapse" class="nav-link px-sm-0 px-2">
-                <i class="fs-5 bi bi-1-square"></i><span class="ms-2 d-none d-sm-inline">Albums</span>
+    <ul class="nav nav-pills flex-md-column flex-row flex-nowrap flex-shrink-1 flex-md-grow-0 flex-grow-1 mb-md-auto mb-0 justify-content-center align-items-center align-items-md-start" id="menu">
+        <li class="nav-item">
+            <a routerLink="/albums"
+                class="nav-link d-flex align-items-center"
+                [ngClass]="{'active': router.url === '/albums'}">
+                <i class="fs-5 bi bi-columns-gap"></i><span class="ms-2 d-none d-md-inline">Albums</span>
             </a>
         </li>
-        <li>
-            <a routerLink="/widget" class="nav-link px-sm-0 px-2">
-                <i class="fs-5 bi bi-2-square"></i><span class="ms-2 d-none d-sm-inline">Widget</span>
+        <li class="nav-item">
+            <a routerLink="/widget"
+                class="nav-link d-flex align-items-center"
+                [ngClass]="{'active': router.url === '/widget'}">
+                <i class="fs-5 bi bi-cpu"></i><span class="ms-2 d-none d-md-inline">Widget</span>
             </a>
         </li>
     </ul>
