finished app, working delete, create, update album + added succes/error message popup

--- a/src/app/modules/albums/components/album-card/album-card.component.html
+++ b/src/app/modules/albums/components/album-card/album-card.component.html
@@ -4,10 +4,14 @@
         <p class="card-text">Belongs to: {{album.userId}}</p>
     </div>
     <div class="card-footer d-flex justify-content-center">
-        <button type="button" class="btn btn-primary me-2">
+        <button type="button"
+            class="btn btn-primary me-2"
+            (click)="showEditAlbumModal()">
             <i class="bi bi-pencil-square"></i>
         </button>
-        <button type="button" class="btn btn-outline-danger">
+        <button type="button"
+            class="btn btn-outline-danger"
+            (click)="showDeleteAlbumModal()">
             <i class="bi bi-trash"></i>
         </button>
     </div>
