--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,2 +1,13 @@
 // Colors
 $primary-color: #1c4ddc;
+
+$shadow: (
+    base: 0px 7px 19px -6px rgba(0 0 0 / 25%),
+);
+
+// Mixins
+@mixin box-shadow() {
+    -webkit-box-shadow: $shadow;
+    -moz-box-shadow: $shadow;
+    box-shadow: $shadow;
+}
