--- a/src/app/modules/albums/components/create-album-modal/create-album-modal.component.html
+++ b/src/app/modules/albums/components/create-album-modal/create-album-modal.component.html
@@ -16,7 +16,7 @@
             type="button"
             class="btn btn-primary"
             (click)="createAlbum()"
-            [disabled]="processing"
+            [disabled]="processing || !title"
         >
             Create
         </button>
