--- a/src/app/modules/widget/components/widget/widget.component.html
+++ b/src/app/modules/widget/components/widget/widget.component.html
@@ -1,1 +1,63 @@
-<p>widget works!</p>
+<div class="widgetContainer">
+    <!-- <div class="widgetWrapper">
+        <div class="widgetGoal">
+            <div class="widgetGoalTitle">
+                pedros weekly goal
+            </div>
+            <div class="widgetLoader">
+                <img src="/assets/widget-loader.svg" width="100px" alt="Loader SVG">
+            </div>
+            <div class="widgetGoalInfo">
+                loader
+            </div>
+        </div>
+        <div class="widgetLeaderboard">
+            <div class="widgetLeaderboardTitle">
+                leaderboard
+
+                <div>select</div>
+            </div>
+            <div class="widgetLeaderboardList">
+                <div>1</div>
+                <div>2</div>
+                <div>3</div>
+                <div>4</div>
+            </div>
+        </div>
+    </div> -->
+    <div class="widgetWrapper">
+        <div class="widgetGoalTitle">
+            pedro's weekly goal
+        </div>
+        <div class="widgetLoader">
+            <small style="font-weight: 400;color: #a2a7ab;">Current</small>
+            <span style="font-size: 2rem;line-height: 30px;margin-bottom: 6px;">38m</span>
+            <small><b>50m Goal</b></small>
+            <img src="/assets/widget-loader.svg" width="100px" height="100px" alt="Loader SVG">
+        </div>
+        <div class="widgetGoalInfo">
+            <span class="goalInfo"><b>12</b> more mins. to achieve this week's Goal.</span>
+            <div class="streakWrapper">
+                <div class="streak">
+                    <span><b>4</b></span>
+                    <span><b>Current Streak</b></span>
+                </div>
+                <div class="streak">
+                    <span><b>12</b></span>
+                    <span><b>Best Streak</b></span>
+                </div>
+            </div>
+        </div>
+        <div class="widgetLeaderboardTitleWrapper">
+            <span class="leaderboardTitle">leaderboard</span>
+
+            <div>select</div>
+        </div>
+        <div class="widgetLeaderboardList">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+            <div>4</div>
+        </div>
+    </div>
+</div>
