--- a/src/app/modules/albums/components/dashboard/dashboard.component.html
+++ b/src/app/modules/albums/components/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
 </ng-container>
 
 <ng-template #loaded>
-    <div class="row">
+    <div class="row pt-4 px-4">
         <div class="col-12">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h1 class="h3">Albums</h1>
