--- a/src/app/modules/widget/components/widget/widget.component.html
+++ b/src/app/modules/widget/components/widget/widget.component.html
@@ -33,7 +33,14 @@
             <small style="font-weight: 400;color: #a2a7ab;">Current</small>
             <span style="font-size: 2rem;line-height: 30px;margin-bottom: 6px;">38m</span>
             <small><b>50m Goal</b></small>
-            <img src="/assets/widget-loader.svg" width="100px" height="100px" alt="Loader SVG">
+            <!-- <img src="/assets/widget-loader.svg" width="100px" height="100px" alt="Loader SVG"> -->
+            <svg class="containerPath" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" width="216.1px" height="188.4px" viewBox="0 14 216.1 188.4" enable-background="new 0 14 216.1 188.4" xml:space="preserve">
+                <path class="grayPath" fill="none" stroke="#dfe3e9" stroke-width="8" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="   M 177.5, 181.4   c 19.4-18.4, 31.5-44.5, 31.5-73.3   c 0-55.8-45.2-101-101-101   S 7,52.2,7,108   c 0,28.9,12.1,54.9,31.5,73.3">
+                </path>
+                <path class="bluePath" fill="none" stroke="#4990e2" stroke-dasharray="0, 490" stroke-width="8" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="   M 177.5, 181.4   c 19.4-18.4, 31.5-44.5, 31.5-73.3   c 0-55.8-45.2-101-101-101   S 7,52.2,7,108   c 0,28.9,12.1,54.9,31.5,73.3">
+                </path>
+            </svg>
+
         </div>
         <div class="widgetGoalInfo">
             <span class="goalInfo"><b>12</b> more mins. to achieve this week's Goal.</span>
